--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   fl_chart: ^1.1.1
   google_fonts: ^6.3.2
+  flutter_svg: ^2.2.1
 
 dev_dependencies:
   flutter_test:
