--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_svg: ^2.2.1
   flutter_map: ^8.2.2
   latlong2: ^0.9.1
+  intl: ^0.20.2
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
